tests/baselines/reference/genericAssignmentCompatOfFunctionSignatures1.errors.txt
tests/cases/compiler/genericAssignmentCompatOfFunctionSignatures1.ts(4,1): error TS2322: Type '<T, U extends { a: T; b: number; }>(x: T, z: U) => void' is not assignable to type '<T, U extends { a: T; b: string; }>(x: T, z: U) => void'.
  Types of parameters 'z' and 'z' are incompatible.
    Type 'U' is not assignable to type '{ a: T; b: number; }'.
      Type '{ a: T; b: string; }' is not assignable to type '{ a: T; b: number; }'.
        Types of property 'b' are incompatible.
          Type 'string' is not assignable to type 'number'.
tests/cases/compiler/genericAssignmentCompatOfFunctionSignatures1.ts(5,1): error TS2322: Type '<T, U extends { a: T; b: string; }>(x: T, z: U) => void' is not assignable to type '<T, U extends { a: T; b: number; }>(x: T, z: U) => void'.
  Types of parameters 'z' and 'z' are incompatible.
    Type 'U' is not assignable to type '{ a: T; b: string; }'.
      Type '{ a: T; b: number; }' is not assignable to type '{ a: T; b: string; }'.
        Types of property 'b' are incompatible.
          Type 'number' is not assignable to type 'string'.


==== tests/cases/compiler/genericAssignmentCompatOfFunctionSignatures1.ts (2 errors) ====
    var x1 = function foo3<T, U extends { a: T; b: string }>(x: T, z: U) { }
    var x2 = function foo3<T, U extends { a: T; b: number }>(x: T, z: U) { }
    
    x1 = x2;
    ~~
!!! error TS2322: Type '<{|T|0|}, {|U|1|} extends { {|a|2|}: {|T|3|}; {|b|4|}: number; }>(x: {|T|5|}, z: {|U|6|}) => void' is not assignable to type '<{|T|7|}, {|U|8|} extends { {|a|9|}: {|T|10|}; {|b|11|}: string; }>(x: {|T|12|}, z: {|U|13|}) => void'.
!!! error TS2322:   Types of parameters 'z' and 'z' are incompatible.
!!! error TS2322:     Type '{|U|14|}' is not assignable to type '{ {|a|15|}: {|T|16|}; {|b|17|}: number; }'.
!!! error TS2322:       Type '{ {|a|18|}: {|T|19|}; {|b|20|}: string; }' is not assignable to type '{ {|a|21|}: {|T|22|}; {|b|23|}: number; }'.
!!! error TS2322:         Types of property 'b' are incompatible.
!!! error TS2322:           Type 'string' is not assignable to type 'number'.
!!! annotated symbol 0 tests/cases/compiler/genericAssignmentCompatOfFunctionSignatures1.ts:2:24
!!! annotated symbol 1 tests/cases/compiler/genericAssignmentCompatOfFunctionSignatures1.ts:2:27
!!! annotated symbol 2 tests/cases/compiler/genericAssignmentCompatOfFunctionSignatures1.ts:2:39
!!! annotated symbol 3 tests/cases/compiler/genericAssignmentCompatOfFunctionSignatures1.ts:2:24
!!! annotated symbol 4 tests/cases/compiler/genericAssignmentCompatOfFunctionSignatures1.ts:2:45
!!! annotated symbol 5 tests/cases/compiler/genericAssignmentCompatOfFunctionSignatures1.ts:2:24
!!! annotated symbol 6 tests/cases/compiler/genericAssignmentCompatOfFunctionSignatures1.ts:2:27
!!! annotated symbol 7 tests/cases/compiler/genericAssignmentCompatOfFunctionSignatures1.ts:1:24
!!! annotated symbol 8 tests/cases/compiler/genericAssignmentCompatOfFunctionSignatures1.ts:1:27
!!! annotated symbol 9 tests/cases/compiler/genericAssignmentCompatOfFunctionSignatures1.ts:1:39
!!! annotated symbol 10 tests/cases/compiler/genericAssignmentCompatOfFunctionSignatures1.ts:1:24
!!! annotated symbol 11 tests/cases/compiler/genericAssignmentCompatOfFunctionSignatures1.ts:1:45
!!! annotated symbol 12 tests/cases/compiler/genericAssignmentCompatOfFunctionSignatures1.ts:1:24
!!! annotated symbol 13 tests/cases/compiler/genericAssignmentCompatOfFunctionSignatures1.ts:1:27
!!! annotated symbol 14 tests/cases/compiler/genericAssignmentCompatOfFunctionSignatures1.ts:1:27
!!! annotated symbol 15 tests/cases/compiler/genericAssignmentCompatOfFunctionSignatures1.ts:2:39
!!! annotated symbol 16 tests/cases/compiler/genericAssignmentCompatOfFunctionSignatures1.ts:1:24
!!! annotated symbol 17 tests/cases/compiler/genericAssignmentCompatOfFunctionSignatures1.ts:2:45
!!! annotated symbol 18 tests/cases/compiler/genericAssignmentCompatOfFunctionSignatures1.ts:1:39
!!! annotated symbol 19 tests/cases/compiler/genericAssignmentCompatOfFunctionSignatures1.ts:1:24
!!! annotated symbol 20 tests/cases/compiler/genericAssignmentCompatOfFunctionSignatures1.ts:1:45
!!! annotated symbol 21 tests/cases/compiler/genericAssignmentCompatOfFunctionSignatures1.ts:2:39
!!! annotated symbol 22 tests/cases/compiler/genericAssignmentCompatOfFunctionSignatures1.ts:1:24
!!! annotated symbol 23 tests/cases/compiler/genericAssignmentCompatOfFunctionSignatures1.ts:2:45
    x2 = x1;
    ~~
!!! error TS2322: Type '<{|T|0|}, {|U|1|} extends { {|a|2|}: {|T|3|}; {|b|4|}: string; }>(x: {|T|5|}, z: {|U|6|}) => void' is not assignable to type '<{|T|7|}, {|U|8|} extends { {|a|9|}: {|T|10|}; {|b|11|}: number; }>(x: {|T|12|}, z: {|U|13|}) => void'.
!!! error TS2322:   Types of parameters 'z' and 'z' are incompatible.
!!! error TS2322:     Type '{|U|14|}' is not assignable to type '{ {|a|15|}: {|T|16|}; {|b|17|}: string; }'.
!!! error TS2322:       Type '{ {|a|18|}: {|T|19|}; {|b|20|}: number; }' is not assignable to type '{ {|a|21|}: {|T|22|}; {|b|23|}: string; }'.
!!! error TS2322:         Types of property 'b' are incompatible.
!!! error TS2322:           Type 'number' is not assignable to type 'string'.
!!! annotated symbol 0 tests/cases/compiler/genericAssignmentCompatOfFunctionSignatures1.ts:1:24
!!! annotated symbol 1 tests/cases/compiler/genericAssignmentCompatOfFunctionSignatures1.ts:1:27
!!! annotated symbol 2 tests/cases/compiler/genericAssignmentCompatOfFunctionSignatures1.ts:1:39
!!! annotated symbol 3 tests/cases/compiler/genericAssignmentCompatOfFunctionSignatures1.ts:1:24
!!! annotated symbol 4 tests/cases/compiler/genericAssignmentCompatOfFunctionSignatures1.ts:1:45
!!! annotated symbol 5 tests/cases/compiler/genericAssignmentCompatOfFunctionSignatures1.ts:1:24
!!! annotated symbol 6 tests/cases/compiler/genericAssignmentCompatOfFunctionSignatures1.ts:1:27
!!! annotated symbol 7 tests/cases/compiler/genericAssignmentCompatOfFunctionSignatures1.ts:2:24
!!! annotated symbol 8 tests/cases/compiler/genericAssignmentCompatOfFunctionSignatures1.ts:2:27
!!! annotated symbol 9 tests/cases/compiler/genericAssignmentCompatOfFunctionSignatures1.ts:2:39
!!! annotated symbol 10 tests/cases/compiler/genericAssignmentCompatOfFunctionSignatures1.ts:2:24
!!! annotated symbol 11 tests/cases/compiler/genericAssignmentCompatOfFunctionSignatures1.ts:2:45
!!! annotated symbol 12 tests/cases/compiler/genericAssignmentCompatOfFunctionSignatures1.ts:2:24
!!! annotated symbol 13 tests/cases/compiler/genericAssignmentCompatOfFunctionSignatures1.ts:2:27
!!! annotated symbol 14 tests/cases/compiler/genericAssignmentCompatOfFunctionSignatures1.ts:2:27
!!! annotated symbol 15 tests/cases/compiler/genericAssignmentCompatOfFunctionSignatures1.ts:1:39
!!! annotated symbol 16 tests/cases/compiler/genericAssignmentCompatOfFunctionSignatures1.ts:2:24
!!! annotated symbol 17 tests/cases/compiler/genericAssignmentCompatOfFunctionSignatures1.ts:1:45
!!! annotated symbol 18 tests/cases/compiler/genericAssignmentCompatOfFunctionSignatures1.ts:2:39
!!! annotated symbol 19 tests/cases/compiler/genericAssignmentCompatOfFunctionSignatures1.ts:2:24
!!! annotated symbol 20 tests/cases/compiler/genericAssignmentCompatOfFunctionSignatures1.ts:2:45
!!! annotated symbol 21 tests/cases/compiler/genericAssignmentCompatOfFunctionSignatures1.ts:1:39
!!! annotated symbol 22 tests/cases/compiler/genericAssignmentCompatOfFunctionSignatures1.ts:2:24
!!! annotated symbol 23 tests/cases/compiler/genericAssignmentCompatOfFunctionSignatures1.ts:1:45